# rainynite-core

./: .gitignore  .gitmodules  CMakeLists.txt
document/: CMakeLists.txt  action.cpp  action_stack.cpp  color.cpp  context.cpp  default_nodes.cpp  document.cpp  document_loader.cpp  empty.cpp  instance.cpp  io.cpp  node_info.cpp  node_tree.cpp  node_tree_transform.cpp  shading.cpp
document/node/: abstract_node.cpp  nic.cpp  old_node.cpp
document/nodes/: CMakeLists.txt  add.cpp  affine.cpp  animated.cpp  any_proxy.cpp  audio.cpp  average.cpp  bones.cpp  boolean.cpp  circle.cpp  color.cpp  color_mix.cpp  color_string.cpp  compare.cpp  conditional.cpp  dynamic_node.cpp  external_node.cpp  extract_coord.cpp  file_string.cpp  follow_path.cpp  format_number.cpp  format_string.cpp  frame.cpp  frame_list.cpp  get_property.cpp  image.cpp  interpolate.cpp  join.cpp  knot.cpp  knot_list.cpp  linear.cpp  list.cpp  math.cpp  morph.cpp  node_tree.cpp  operators.cpp  path_shape.cpp  path_xy.cpp  point_xy.cpp  random.cpp  (+18 more)
document/nodes/renderable/: composite.cpp  empty.cpp  image.cpp  render_shape.cpp  rotate.cpp  scale.cpp  svg.cpp  text.cpp  transform.cpp  translate.cpp
document/nodes/test/: benchmark.cpp  render.cpp  transform.cpp
filters/: CMakeLists.txt  json_reader.cpp  json_writer.cpp  svg_path_reader.cpp  svg_path_writer.cpp  svg_writer.cpp  yaml_reader.cpp  yaml_writer.cpp
include/core/: abstract_factory.h  action.h  action_stack.h  all_types.h  audio.h  audio_node.h  bezier_outline.h  class_init.h  color.h  context.h  destroy_detector.h  document.h  exceptions.h  node.h  node_info.h  node_tree.h  node_tree_transform.h  node_tree_traverse.h  nothing.h  nothing_io.h  null_shape.h  nullptr.h  parse.h  reader.h  renderable.h  renderable_node.h  renderer.h  serialize.h  shading.h  shapes.h  state_machine.h  time.h  time_point.h  type_info.h  types.h  writer.h
include/core/actions/: change_link.h  change_value.h  custom_property.h  list.h  reverse.h  set_enabled.h
include/core/color/: color.h  mix.h
include/core/filters/: json_reader.h  json_writer.h  reader.h  svg_path_reader.h  svg_path_writer.h  svg_writer.h  writer.h  yaml_reader.h  yaml_writer.h
include/core/fs/: document_loader.h  from_context.h  path.h
include/core/log/: exception_log.h  global.h  simple_exception_log.h
include/core/node/: abstract_list.h  abstract_node.h  abstract_value.h  cast.h  common.h  doc_string.h  has_id.h  link_storage.h  list.h  make.h  named_link_storage.h  new_node.h  node.h  node_in_context.h  notify.h  property.h  proxy_node.h  replace_context.h  traverse.h  type_constraint.h  value.h
include/core/node_info/: copy.h  default_node.h  macros.h  node_info.h
include/core/node_tree/: actions.h  exceptions.h  has_tree.h  index.h  io.h  node_tree.h  path.h  transform.h  traverse.h
include/core/nodes/: animated.h  composite.h  morph.h  path_shape.h
include/core/os/: fork_pipe.h
include/core/renderers/: svg_renderer.h
include/core/serialize/: exceptions.h  json.h  node_reader.h  node_writer.h  rapidjson.h  serialize.h
include/core/std/: algorithm.h  any.h  array.h  map.h  memory.h  numeric.h  optional.h  queue.h  set.h  string.h  traits.h  tuple.h  type.h  types.h  vector.h
include/core/time/: format.h  parse.h  period.h  time.h  time_period.h
include/core/util/: class_init.h  crtp.h  destroy_detector.h  detect.h  doc_string.h  nothing.h  nothing_io.h  nullptr.h  state_machine.h  type_info.h  type_info_macros.h
log/: CMakeLists.txt  simple_exception_log.cpp
os/: CMakeLists.txt  fork_pipe.cpp
renderers/: CMakeLists.txt  svg_renderer.cpp
renderers/svg_renderer/: CMakeLists.txt  composite.cpp  empty.cpp  image.cpp  render_shape.cpp  shape.h  shapes.cpp  svg.cpp  svg_module.h  svg_renderer.cpp  text.cpp  transform.cpp
tests/: CMakeLists.txt  actions.cpp  class_init.cpp  crtp.cpp  dynamic_node.cpp  interpolate_node.cpp  link_storage.cpp  list_nodes.cpp  new_node.cpp  new_node.h  node.cpp  node_tester.cpp  node_tree.cpp  node_tree_modules.cpp  notify.cpp  nullptr.cpp  parse.cpp  rapidjson.cpp  serialize.cpp  time.cpp  time_nodes.cpp  type_constraint.cpp  zero_context.h
tests/data/: boolean.rnite  custom_property.rnite  dynamic.rnite  external.rnite  external_source.rnite  format.rnite  frames.rnite  interpolate.rnite  list.rnite  list_format.rnite  notags.rnite  numeric.rnite  point.rnite  random.rnite  sanity.rnite  serialize.rnite  sorting.rnite  string.rnite  string_anchors.rnite  svg_render.rnite  time.rnite  to_string.rnite  transform_tree.rnite  zdepth.rnite
time/: CMakeLists.txt  format.cpp  parse.cpp  time.cpp
